--- a/Forums/templates/index.html
+++ b/Forums/templates/index.html
@@ -3,56 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>One million arab coders</title>
-    <link rel="stylesheet" type="text/css">
-
-    <style>
-        body, html {margin: 0;
-            padding: 0;
-            font-family: "Myriad pro", Helvetica, Arial, sans-serif;}
-
-        h1 {margin-top: 20px;
-            padding-top: 10px;
-            padding-left:7px;}
-
-        ul#list{width:85%;
-            float: right;
-            display:inline;
-            padding: 0 0 2px;
-            margin: 0;
-            text-align: right;}
-
-        ul#list li{display: inline;
-            list-style: none;
-            padding-right: 10px;}
-
-        h2{text-align: center;}
-
-        .posts {padding-top: 50px;}
-
-        ul{ display: inline-block;
-            padding-left: 400px;}
-        ul li{padding-top: 20px;}
-
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
 <body>
-    <div>
-        <h1> Coders are next Gen !!! </h1>
-        <ul id="list">
-            <li> <a href="#">Home</a> </li>
-            <li> <a href="#">Profile</a> </li>
-            <li> <a href="#">Members</a> </li>
-            <li> <a href="#CONTACT">Contact us</a> </li>
-        </ul>
+    <div id="container">
+        <nav id="menu">
+            <h1 id="logo"> Arab Coders Forums </h1>
+            <div class="menu-all"><ul>
+                <li class="menu-item"><a href="#"> Home </a></li>
+                <li class="menu-item"><a href="#"> Members </a></li>
+                <li class="menu-item"><a href="#"> Categories </a></li>
+                <li class="menu-item"><a href="#"> Tutorials </a></li>
+                <li class="menu-item"><a href="#"> Contact </a></li>
+            </ul></div>
+        </nav>
     </div>
-    <div class="posts"> <h2> POSTS <a href="#" style="padding-left: 50px"> Creat Post </a></h2>
-        <ul>
-            <li> Post 1 <a href="#" style="padding-left: 300px"> view </a><a href="#" style="padding-left: 20px">edit</a><a href="#" style="padding-left: 20px">delete</a></li>
-            <li> Post 2 <a href="#" style="padding-left: 300px"> view </a><a href="#" style="padding-left: 20px">edit</a><a href="#" style="padding-left: 20px">delete</a></li>
-            <li> Post 3 <a href="#" style="padding-left: 300px"> view </a><a href="#" style="padding-left: 20px">edit</a><a href="#" style="padding-left: 20px">delete</a></li>
-            <li> post 4 <a href="#" style="padding-left: 300px"> view </a><a href="#" style="padding-left: 20px">edit</a><a href="#"style="padding-left: 20px">delete</a></li>
-        </ul>
+    <div class="content">
+        <h2> POSTS <a href="#" style="padding-left: 200px">Create Post</a></h2>
+        <table id="body-content">
+            <tbody style="padding-buttom: 20px;">
+        {% for post in posts %}
+            <tr>
+                <td>
+                    {{post.title}}
+                </td>
+                <td>
+                    <a href="#">view</a>
+                </td>
+                <td>
+                    <a href="#">edit</a>
+                </td >
+                <td>
+                    <a href="#">delete</a>
+                </td>
+            </tr>
+        {% endfor %}
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
