Added views to add topics

--- a/Forums/static/style.css
+++ b/Forums/static/style.css
@@ -83,3 +83,43 @@ h2{
 #body-content{
     margin-top: 20px;
 }
+
+input[type="text"], textarea {
+    background-color: white;
+    width: 20%;
+    height: 40px;
+    border: 2px solid #999;
+    border-radius: 15px;
+    margin: 15px 0;
+    direction: ltr;
+    padding: 0 20px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+textarea {
+    width: 50%;
+    height: 250px;
+}
+
+form{
+    margin-top: 50px;
+    text-align: center;
+}
+
+.cta {
+    width: 190px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: #39516b;
+    color: #FFF;
+    margin: 20px;
+    font-size: 120%;
+    box-shadow: 0 5px #999;
+    border: none;
+    cursor: pointer;
+    transition-duration: 0.08s;
+}.cta:active {
+    box-shadow: 0 0px #666;
+    transform: translateY(5px);
+
